--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="img/icon.ico">
+  <meta name="description" content="Michelle Li Resume">
+  <meta name="author" content="862458266">
 
-  <title>John Doe - Business Administration</title>
+  <title>Michelle Li - Financial Advisor</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Michelle Li</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/MichelleLi.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,32 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Michelle Li
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Business Economics📚</div>
+        <p class="lead mb-4">My name is Michelle, and I'm a driven and multi-talented individual on a journey to merge my passion for business, creativity, and education. Currently, I'm enrolled as a Business Economics student at the University of California, Riverside (UCR), and very day at UCR is an opportunity for me to learn, grow, and prepare myself for a future where I can make a meaningful impact.<br><br>
 
-        Enter bio here<br><br>
+        With experience as a real estate agent assistant, I've honed my organizational skills and mastered effective communication. Fluent in both English and Chinese, I express myself through art, exploring themes of identity and connection. Volunteering as a teacher in an elementary cross-literacy program has been fulfilling, nurturing young minds and fostering a love for learning.<br><br>
 
-        Enter bio here
+        Outside of academics, I'm active in organizing business events, infusing them with attention to detail and creativity. Looking ahead, I'm excited to continue my journey in business economics, eager to make a positive impact<br><br>
+        
+        Renowned for my creative approach, problem-solving skills, and ability to unite people, I thrive on devising innovative solutions to challenges. My adept interpersonal skills foster connections built on trust and mutual respect.<br><br>
+
+        In leadership roles, I excel at guiding teams towards shared objectives with clarity and determination. My strong work ethic ensures tasks are completed with proficiency and precision, whether working independently or collaborating with others.<br><br>
+
+        With a relentless drive for success and a commitment to self-improvement, I am prepared to leave a lasting impact in any endeavor I pursue. My unique combination of creativity, problem-solving prowess, and interpersonal finesse empowers me to excel in diverse environments and overcome obstacles effectively.
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://github.com/Michelle-Li-UCR">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/Michelle-Li-UCR">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://github.com/Michelle-Li-UCR">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="https://github.com/Michelle-Li-UCR">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,48 +98,49 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <h3 class="mb-0">Cross Literacy Program - Reading Buddy</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Holly Avenue Elemntary and Arcadia High School</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • taught elementary children<br> 
+              • tutored reading<br>
+              • course planning<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">2021-2023</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <h3 class="mb-0">Real Estate Agent Assistant</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Pinnacle Real Estate</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • set up for open house<br>
+              • help with showings<br>
+              • desgined flyers and posters<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">2020 - now</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Translator</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">ZeQuanGuanJi</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • fluent in English and Chinese<br>
+            • verbal translation<br>
+            • document and text file translation<br>
+            • proof reading<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">2019-2021</span>
           </div>
         </div>
 
@@ -152,11 +159,11 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">Business Economics Undergraduate</div>
+            <div>Current Student</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">2023 - now</span>
           </div>
         </div>
 
@@ -191,7 +198,10 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/pic1.jpg" width="500px">
+            <img src="img/pic2.jpg" width="500px"><br>
+            <img src="img/pic3.jpg" width="500px">
+            <img src="img/pic4.jpg" width="500px"><br>
         </center>
       </div>
     </section>
@@ -199,7 +209,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Michelle Li</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
